Fixed Flex Alignment TODO: Make it grid

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 h1 {
-    padding: 10px;
+    padding: 1rem;
     border: 2px solid black;
     text-align: center;
 }
@@ -17,7 +17,6 @@ h1 {
 
 .row input, .row button {
     padding: 10px;
-    margin: 1rem;
 }
 
 .row .remove-row {
